Avoid doing reflection to parse well known types (boxed primitives)
Signed-off-by: Paulo Lopes <pmlopes@gmail.com>